--- a/views/_booking_planning_assign_form.erb
+++ b/views/_booking_planning_assign_form.erb
@@ -1,5 +1,6 @@
     <div id="select_resource" class="highlight_block" style="display: none">
       <p id="select_resource_help" class="smaller_text">Seleccione el recurso al que desea realizar la reserva pulsando sobre cualquier celda de la fila del recurso</p>
+      <div id="select_resource_detail" class="smaller_text"></div>
       <div>
         <div id="reassign_resource" style="display:none">
           <div class="guiblock smaller_text">
