--- a/views/_booking_planning.erb
+++ b/views/_booking_planning.erb
@@ -32,6 +32,14 @@
   	text-align: center;
   }
 
+  .available {
+    color: green;
+  }
+
+  .unavailable {
+    color: red;
+  }
+
   @keyframes selected {
     from { background-color: red; }
     to { background-color: inherit; }
