--- a/views/_booking_planning.erb
+++ b/views/_booking_planning.erb
@@ -82,6 +82,15 @@
   <div class="grid_3">
     <div id="operation_container" class="left-margin smaller_text">
       <div id="operation_header">
+        <form name="assign_pending_search">
+          <div class="formrow">
+            <select id="planning_views" class="uppercase_text smaller_text" style="width:99%">
+              <option value="home">Inicio</option>
+              <option value="assign_pending">Ver reservas pendientes de asignar</option>
+              <option value="prereservations">Ver prereservas</option>
+            </select>  
+          </div>
+        </form>
         <form name="reservation_search" style="display: none">
           <div class="formrow">
             <input type="text" id="reservation_search_text" maxlength="40"
@@ -93,11 +102,6 @@
       <div id="operation_area">
       </div>
       <div id="operation_bottom">
-        <form name="assign_pending_search">
-          <div class="formrow">
-            <input type="button" id="assign_pending_button" value="ver reservas pendientes de asignar" class="form-button uppercase_text smaller_text" style="width:100%"/>
-          </div>
-        </form>
       </div>
     </div>
     <div id="prereservation_container" class="left-margin smaller_text" style="display:none; max-height: 350px; overflow-y: scroll">
