prereservation in new planning + bugs resolution

--- a/views/_booking_planning.erb
+++ b/views/_booking_planning.erb
@@ -87,7 +87,7 @@
             <select id="planning_views" class="uppercase_text smaller_text" style="width:99%">
               <option value="home">Inicio</option>
               <option value="assign_pending">Ver reservas pendientes de asignar</option>
-              <option value="prereservations">Ver prereservas</option>
+              <option value="prereservations">Ver prereservas (bloqueos stock)</option>
             </select>  
           </div>
         </form>
