--- a/views/_booking_planning_assign_form.erb
+++ b/views/_booking_planning_assign_form.erb
@@ -10,7 +10,7 @@
             <input type="hidden" name="resource"/>
             <button id="reassign_button" type="button" class="form-button green-button centered_text" style="margin: 0 auto; display: block; width: 100%">Asignar recurso</button>
           </form>
-          <button type="button" id="cancel_select_resource_button" class="form-button red-button" style="margin: 0 auto; width: 100%">Cancelar asignación recurso</button>
+          <button type="button" id="cancel_select_resource_button" class="form-button red-button" style="margin: 0 auto; width: 100%">Salir asignación recurso</button>
         </div>    
       </div>
       <div id="select_resource_detail" class="smaller_text"></div>
