--- a/views/_booking_planning_reassign_form.erb
+++ b/views/_booking_planning_reassign_form.erb
@@ -2,7 +2,7 @@
       <p id="select_resource_help" class="smaller_text bottom-margin">Seleccione el recurso al que desea reasignar la reserva pulsando sobre cualquier celda de la fila del recurso</p>
       <div>
         <button type="button" id="cancel_resource_button" class="form-button red-button"
-        style="margin: 0 auto; display: block; width: 100%">Cancelar selección reserva</button>
+        style="margin: 0 auto; display: block; width: 100%">Salir reserva seleccionada</button>
         <div id="reassign_resource" style="display:none">
           <div class="guiblock">
             <div><strong style="width: 90px; display:inline-block">Recurso actual:</strong> <span id="original_resource"></span></div>
@@ -14,7 +14,7 @@
             <input type="hidden" name="resource"/>
             <button id="reassign_button" type="button" class="form-button green-button centered_text" style="margin: 0 auto; display: block; width: 100%">Reasignar recurso</button>
           </form>
-          <button type="button" id="cancel_select_resource_button" class="top-margin form-button red-button" style="margin: 0 auto; width: 100%">Cancelar reasignar recurso</button>
+          <button type="button" id="cancel_select_resource_button" class="top-margin form-button red-button" style="margin: 0 auto; width: 100%">Salir reasignar recurso</button>
         </div>    
       </div>
       <div id="select_resource_detail" class="smaller_text"></div>  
