--- a/views/booking_activities_management.erb
+++ b/views/booking_activities_management.erb
@@ -340,7 +340,8 @@
                 <select name="occurence" class="fieldcontrol" id="occurence">
                   <option value="one_time"><%= t.booking_activity_management.form.occurrence_one_time %></option>
                   <option value="multiple_dates"><%= t.booking_activity_management.form.occurrence_multiple_dates %></option>
-                 <option value="cyclic"><%= t.booking_activity_management.form.occurrence_cyclic %></option>                                
+                 <option value="cyclic"><%= t.booking_activity_management.form.occurrence_cyclic %></option>
+                 <option value="customer_customizable"><%=t.booking_activity_management.form.occurrence_customizable%></option>                                
                 </select>   
               </div>
               <div class="formrow">
