--- a/views/booking_activities.js.erb
+++ b/views/booking_activities.js.erb
@@ -10,12 +10,9 @@ require(['jquery',
 
     searchButtonClick: function() {
       var date_from = $('#date_from').datepicker('getDate').toString('yyyy-MM-dd');
-      var date_to = $('#date_to').datepicker('getDate').toString('yyyy-MM-dd');
-      $('#from').val(date_from);
-      $('#to').val(date_to);
+      $('#date').val(date_from);
       $('#date_from').prop('disabled',true);
-      $('#date_to').prop('disabled',true);      
-      $('form[name=report_programmed_activities_form]').submit();
+      $('form[name=report_reservations_form]').submit();
     }
 
   };
@@ -36,11 +33,9 @@ require(['jquery',
 
     init : function() {
          var url_vars = this.getUrlVars();
-         var from = url_vars['from'] === undefined ? '<%=Date.today.strftime("%Y-%m-%d")%>' : decodeURIComponent(url_vars['from']);        
-         var to = url_vars['to'] === undefined ? '<%=Date.civil(Date.today.year,12,31).strftime("%Y-%m-%d")%>' : decodeURIComponent(url_vars['to']);
-         $('#print_link').attr('href', '/admin/booking/programmed-activities-pdf?from='+from+'&to='+to);
+         var from = url_vars['date'] === undefined ? '<%=Date.today.strftime("%Y-%m-%d")%>' : decodeURIComponent(url_vars['date']);        
+         $('#print_link').attr('href', '/admin/booking/activities-pdf?date='+from);
          var date_from = $.datepicker.parseDate("yy-mm-dd", from);
-         var date_to = $.datepicker.parseDate("yy-mm-dd", to);
 
          var locale = $.datepicker.regional["<%=session[:locale] || 'es'%>"];             
          $.datepicker.setDefaults($.datepicker.regional["<%=session[:locale] || 'es'%>"]);
@@ -64,25 +59,6 @@ require(['jquery',
          }
          else {
            $('#date_from').datepicker('setDate', '+0');
-         }
-
-         $('#date_to').datepicker(
-                 {controlType: 'select',
-                  showTimezone: false, 
-                  useLocalTimezone: true,
-                  numberOfMonths:1, 
-                  maxDate: new Date().add(365).days(),
-                  dateFormat: 'dd/mm/yy',
-                  onSelect: function(dateText) {
-                    activitiesController.dateChanged();
-                  }},
-                  locale
-                  );         
-         if (date_to != null) {
-           $('#date_to').datepicker('setDate',date_to);
-         }
-         else {
-           $('#date_to').datepicker('setDate', '+0');
          }
 
          $('#search').bind('click', function() {
